# docs/swagger.yaml
@@ -31,7 +31,230 @@ info:
   title: 書銘的API
   version: "1.0"
 paths:
-  /shumingyu/alluser:
+  /shumingyu/example:
+    get:
+      consumes:
+      - application/json
+      description: 給書銘測試
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shuming.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shuming.ErrorResponse'
+      summary: 測試
+      tags:
+      - Test
+  /shumingyu/order:
+    get:
+      consumes:
+      - application/json
+      description: 回傳所有訂單的資料 跟 筆數
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shuming.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shuming.ErrorResponse'
+      summary: 取得訂單清單
+      tags:
+      - Order
+    post:
+      consumes:
+      - application/json
+      description: 新增訂單
+      parameters:
+      - description: 用戶名稱
+        in: body
+        name: user
+        required: true
+        schema:
+          type: string
+      - description: 訂單總金額
+        in: body
+        name: total_amount
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shuming.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shuming.ErrorResponse'
+      summary: 新增訂單
+      tags:
+      - Order
+    put:
+      consumes:
+      - application/json
+      description: 更新訂單
+      parameters:
+      - description: 用戶資訊
+        in: body
+        name: user_id
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shuming.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shuming.ErrorResponse'
+      summary: 更新訂單
+      tags:
+      - Order
+  /shumingyu/product:
+    get:
+      consumes:
+      - application/json
+      description: 回傳所有商品的資料 跟 筆數
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shuming.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shuming.ErrorResponse'
+      summary: 取得商品資料
+      tags:
+      - Product
+    post:
+      consumes:
+      - application/json
+      description: 新增商品資料
+      parameters:
+      - description: 商品名稱
+        in: body
+        name: name
+        required: true
+        schema:
+          type: string
+      - description: 描述
+        in: body
+        name: description
+        required: true
+        schema:
+          type: string
+      - description: 價格
+        in: body
+        name: price
+        required: true
+        schema:
+          type: string
+      - description: 庫存
+        in: body
+        name: stock
+        required: true
+        schema:
+          type: string
+      - description: 庫存單位
+        in: body
+        name: sku
+        required: true
+        schema:
+          type: string
+      - description: 圖片
+        in: body
+        name: imageURL
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shuming.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shuming.ErrorResponse'
+      summary: 新增商品資料
+      tags:
+      - Product
+    put:
+      consumes:
+      - application/json
+      description: 更新商品資料
+      parameters:
+      - description: 商品名稱
+        in: body
+        name: name
+        required: true
+        schema:
+          type: string
+      - description: 描述
+        in: body
+        name: description
+        required: true
+        schema:
+          type: string
+      - description: 價格
+        in: body
+        name: price
+        required: true
+        schema:
+          type: string
+      - description: 庫存
+        in: body
+        name: stock
+        required: true
+        schema:
+          type: string
+      - description: 庫存單位
+        in: body
+        name: sku
+        required: true
+        schema:
+          type: string
+      - description: 圖片
+        in: body
+        name: imageURL
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shuming.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shuming.ErrorResponse'
+      summary: 更新商品資料
+      tags:
+      - Product
+  /shumingyu/user:
     get:
       consumes:
       - application/json
@@ -55,15 +278,27 @@ paths:
       - application/json
       description: 增加User的資料
       parameters:
-      - description: 帳號
-        in: body
-        name: account
-        required: true
-        schema:
-          type: string
       - description: 使用者名稱
         in: body
         name: name
+        required: true
+        schema:
+          type: string
+      - description: 電子信箱
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: 密碼
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      - description: 住址
+        in: body
+        name: address
         required: true
         schema:
           type: string
@@ -81,27 +316,32 @@ paths:
       summary: 增加User
       tags:
       - Users
-  /shumingyu/disabled:
-    post:
+    put:
       consumes:
       - application/json
-      description: 修改User的狀態
+      description: 更新User的資料
       parameters:
-      - description: 帳號
-        in: body
-        name: account
-        required: true
-        schema:
-          type: string
       - description: 使用者名稱
         in: body
         name: name
         required: true
         schema:
           type: string
-      - description: 使用者狀態(disabled/enabled)
+      - description: 電子信箱
         in: body
-        name: status
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: 密碼
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      - description: 住址
+        in: body
+        name: address
         required: true
         schema:
           type: string
@@ -116,26 +356,7 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/shuming.ErrorResponse'
-      summary: 修改User
-      tags:
-      - Users
-  /shumingyu/example:
-    get:
-      consumes:
-      - application/json
-      description: 給書銘測試
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/shuming.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/shuming.ErrorResponse'
-      summary: 測試
+      summary: 更新User
       tags:
       - Users
 securityDefinitions:
